--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <meta name="description" content="If you missed a package delivery or a mailpiece needing your signature, learn how to schedule redelivery online.">
     <title>Schedule a Redelivery | USPS</title>
+    <style>
    img {
     width: 100%;
     height: auto;
   }
+</style>
 </head>
 <body>
   <h1><img src="uspstop.jpg" alt="toppage" class="img"></h1>
