--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
   <h1><img src="uspstop.jpg" alt="toppage" class="img"></h1>
-  <h2><img src="status.jpg" alt="dstatus" class="img"></h2>
+  <h2><img src="status.jpg" alt="dstatus"></h2>
 </body>
 </html>
