--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Schedule a Redelivery | USPS</title>
     <style>
    img {
-    width: 100%;
-    height: 150%;
+    width: 600px;
+    height: auto;
   }
 </style>
 </head>
