--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </style>
 </head>
 <body>
-  <h1><img src="uspstop.jpg" alt="toppage" class="img"></h1>
-  <h2><img src="status.jpg" alt="dstatus"></h2>
+  <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
 </body>
 </html>
