--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Schedule a Redelivery | USPS</title>
     <style>
    img {
-    width: 600px;
+    width: 100%;
     height: auto;
   }
 </style>
