--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
 </head>
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
+    <h2><script src="https://www.paypal.com/sdk/js?client-id=BAAOVOieKeyHuIenjiIwxIYYb25iLg-ZMa8lrQZJ0xeeDffDqHHl1tJkQJZ4SRsdWLtknylom_u1IkyuBQ&components=hosted-buttons&enable-funding=venmo&currency=USD"></script>
+<div id="paypal-container-HMVXNB372QVLA"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "HMVXNB372QVLA",
+  }).render("#paypal-container-HMVXNB372QVLA")
+</script></h2>
 </body>
 </html>
