--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     width: 100%;
     height: auto;
   }
+    center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 150px;
+    width: 200px;
+    }
 </style>
 </head>
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
-    <h2><a href="uspspay.html"><img src="button.jpg" alt="pay"></h2>
+    <h2><a href="uspspay.html"><img src="button.jpg" alt="pay" class="center"></h2>
 </body>
 </html>
