--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
     height: 150px;
     width: 200px;
     }
+.button {
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+}
+.button1 {background-color: #04AA6D;} /* Green */
+.button2 {background-color: #008CBA;} /* Blue */
 </style>
 </head>
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
     <h2><a href="uspspay.html"><img src="button.jpg" alt="pay" class="center"></h2>
+    <h3><button type= "button" button class="button button2" onclick="payment.html"></h3>
 </body>
 </html>
