--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ cursor: pointer;
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
     <h2></h2>
-    <h3><button type= "button" button class="button button2" onclick="payment.html"></h3>
+    <h3><button type= "button" button class="button button2" onclick="payment.html" class="center">Continue</button></h3>
 </body>
 </html>
