--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ color: white;
 padding: 15px 32px;
 text-align: center;
 text-decoration: none;
-display: inline-block;
+display: flex;
+align-items: center;
 font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
