--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ text-align: center;
 text-decoration: none;
 display: flex;
 align-items: center;
+justify-content: center;
 font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
@@ -35,6 +36,6 @@ cursor: pointer;
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
     <h2></h2>
-    <h3><button type= "button" button class="button button2" onclick="payment.html" class="center">Continue</button></h3>
+    <h3><button type= "button" button class="button button2" onclick="payment.html">Continue</button></h3>
 </body>
 </html>
