--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 .button {
 border: none;
 color: white;
-padding: 150px 100px;
+padding: 15px 32px;
 text-align: center;
 text-decoration: none;
 display: flex;
@@ -28,6 +28,8 @@ justify-content: center;
 font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
+margin-right: 50%;
+margin-left: 50%;
 }
 .button1 {background-color: #04AA6D;} /* Green */
 .button2 {background-color: #008CBA;} /* Blue */
