--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@ margin-left: 50%;
 <body>
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
     <h2></h2>
-    <h3><button type= "button" button class="button button2" onclick="payment.html">Continue</button></h3>
+    <h3><button type= "button" button class="button button2" onclick="https://www.paypal.com/ncp/payment/B997MA9H2MRKL">Continue</button></h3>
 </body>
 </html>
