--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 font-size: 16px;
+margin: 2px 4px;
 cursor: pointer;
 margin-right: 50%;
 margin-left: 50%;
