--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 .button {
 border: none;
 color: white;
-padding: 25px 45px;
+padding: 15px 25px;
 text-align: center;
 text-decoration: none;
-display: flex;
-align-items: center;
-justify-content: center;
+display: block;a
 font-size: 16px;
 margin: 2px 4px;
 cursor: pointer;
