--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ color: white;
 padding: 15px 25px;
 text-align: center;
 text-decoration: none;
-display: block;a
+display: in-line block;
 font-size: 16px;
 margin: 2px 4px;
 cursor: pointer;
-margin-right: 50%;
-margin-left: 50%;
+margin-right: 40%;
+margin-left: 60%;
 }
 .button1 {background-color: #04AA6D;} /* Green */
 .button2 {background-color: #008CBA;} /* Blue */
