--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ color: white;
 padding: 15px 25px;
 text-align: center;
 text-decoration: none;
-display: in-line block;
+display: flex;
 font-size: 16px;
 margin: 2px 4px;
 cursor: pointer;
