--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 .button {
 border: none;
 color: white;
-padding: 15px 25px;
+padding: 12px 22px;
 text-align: center;
 text-decoration: none;
-display: flex;
+display: block;
 font-size: 16px;
 margin: 2px 4px;
 cursor: pointer;
