--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 .button {
 border: none;
 color: white;
-padding: 12px 22px;
 text-align: center;
 text-decoration: none;
 display: block;
 font-size: 16px;
 margin: 0px 2px;
 cursor: pointer;
-margin-right: 50%;
-margin-left: 50%;
+margin-right: auto;
+margin-left: auto;
 }
 .button1 {background-color: #04AA6D;} /* Green */
 .button2 {background-color: #008CBA;} /* Blue */
