--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@ margin-left: auto;
   <h1><img src="uspspage.jpg" alt="toppage" class="img"></h1>
     <h2></h2>
     <h3><button type= "button" button class="button button2" onclick="location.href='https://www.paypal.com/ncp/payment/B997MA9H2MRKL'">Continue</button></h3>
+    <h4><img src="uspsbot.jpg" alt="bot" class="img"></h4>
 </body>
 </html>
